<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/harvestsphere"
                    android:scaleType="centerInside"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/mCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTakePhoto"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView" />

        <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSelectPhoto"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mCameraButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toStartOf="@+id/mDetectButton" />

        <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descriptionImage"
            app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.896"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@android:color/darker_gray" />

        <Button
            android:text="@string/buttonDiagnose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mDetectButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            android:layout_marginBottom="8dp" />

        <TextView
            android:text="@string/defaultImage"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/mResultTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:textStyle="bold"
            android:textAlignment="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
